# Interpretor

./: CMakeLists.txt
src/: CMakeLists.txt  garbage_collector.cpp  garbage_collector.h  gc_object.h  gc_object_type.h  gc_object_type_registry.h  gc_object_type_table.cpp  instruction.cpp  instruction.h  machine.cpp  machine.h  main.cpp  operation.cpp  operation.h  operator.cpp  operator_registry.cpp  operator_registry.h  operator_table.cpp  operator_type.h  plog.h  primative_operator.cpp  primative_operator.h  primitive_operator.cpp  primitive_operator.h  stack.h  table_type.cpp  table_type.h  value.cpp  value.h
src/analyzer/: code_generator.cpp  code_generator.h  lexical_analyzer.cpp  lexical_analyzer.h  primitive_label_compiler.cpp  primitive_label_compiler.h  primitive_label_compiler_registry.cpp  primitive_label_compiler_registry.h
src/machine/: garbage_collector.h  gc_object_type_registry.cpp  instruction.h  operator_registry.h  primitive_operator.cpp  table_type.cpp  table_type.h  value.h
test/analyzer_test/: CMakeLists.txt  main.cpp
test/primative_instruction_test/: CMakeLists.txt  main.cpp
